# p7

./: .env  .gitignore  README.md  docker-compose-rocket.yml  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: main.yml
Benchmark-excel/: benchmarkStatsV2.xlsx  benchmarkStatsV3.xlsx
Benchmarks/: Benchmarks.sln
Benchmarks/Benchmarks/: .dockerignore  Benchmark_compose.Dockerfile  Benchmarks.csproj  CodeLoader.cs  CodeRunnerQueueClient.cs  Dockerfile  Program.cs  RequestsAndResponses.cs  TaskBuilder.cs  TicketedCodeRunnerBenchmark.cs
Benchmarks/Clients/: Clients.csproj  CodeRunnerQueueClient.cs  EnvLoader.cs  TaskBuilder.cs
Benchmarks/CodeRunnerClientTest/: CodeRunnerClientTest.csproj  CodeRunnerQueueClientTest.cs  Test.Dockerfile
backend/: docker-compose.yaml  docker-compose.yml  webserver.readme.md
backend/compile-test/: Cargo.toml  test.hi  test.hs
backend/webserver/: .env  .ghc.environment.x86_64-linux-8.10.7  .ghc.environment.x86_64-mingw32-8.10.7  .gitignore  Cargo.toml  Dockerfile  Dockerfile2  readme.md
backend/webserver - rocket/: Cargo.toml  Dockerfile  Rocket.toml
backend/webserver - rocket/src/: main.rs
backend/webserver - rocket/src/endpoints/: cors.rs  haskell.rs
backend/webserver - rocket/src/services/: code_runner.rs
backend/webserver/src/: code_runner.rs  main.rs  writefile.rs
backend/webserver/src/domain/: code_runner_result.rs  exercise_submission_request.rs  mod.rs  shared_state.rs  task.rs  web_api_data.rs
backend/webserver/src/endpoints/: haskell.rs  index.rs  mod.rs  ping.rs
backend/webserver/src/services/: code_runner.rs  dir_generator.rs  mod.rs  sweep_configuration.rs  test_runner.rs  worker.rs  write_struct.rs
backend/webserver/src/testing/: code.hs  temp_solution.hs  temp_test.hs
benchmarks/: .env  .gitignore  Benchmarks.sln
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/prisma/: dev.db  (+2 more)
report/: LICENSE  master.tex
(+218 files in other folders)
