[package]
name = "web_server"
version = "0.1.0"
authors = ["DOCKER"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
wait-timeout = "0.2.0"
serde = "1.0.144"
rand="0.8.5"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
