[package]
name = "web_server"
version = "0.1.0"
authors = ["DOCKER"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
wait-timeout = "0.2.0"
serde = { version = "1.0.144", features = ["derive"] }
rand="0.8.5"
tokio={ version = "1", features = ["full"] }
axum = "0.5.16"
serde_json = "1.0.87"
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.2.1"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
